@@ -1,37 +1,32 @@
 configurations {
-    capsule
     defaultCfg.extendsFrom api 
     //provided
     console.extendsFrom defaultCfg
-    ignite.extendsFrom defaultCfg
-    ga4gh.extendsFrom defaultCfg
     google.extendsFrom defaultCfg
     amazon.extendsFrom defaultCfg
     azure.extendsFrom defaultCfg
     legacy.extendsFrom defaultCfg
     tower.extendsFrom defaultCfg
+    wave.extendsFrom defaultCfg
 }
 
 dependencies {
     api project(':nextflow')
     // include Ivy at runtime in order to have Grape @Grab work correctly
-    defaultCfg "org.apache.ivy:ivy:2.3.0"
-    // default cfg = runtime + httpfs + amazon + tower client
+    defaultCfg "org.apache.ivy:ivy:2.5.2"
+    // default cfg = runtime + httpfs + lineage + amazon + tower client + wave client
     defaultCfg project(':nf-httpfs')
-    // Capsule manages the fat jar building process
-    capsule 'io.nextflow:capsule:1.1.0'
-    capsule 'io.nextflow:capsule-maven:1.0.3.2'
+    defaultCfg project(':nf-lineage')
     console project(':plugins:nf-console')
-    ga4gh   project(':plugins:nf-ga4gh')
     google  project(':plugins:nf-google')
     amazon  project(':plugins:nf-amazon')
     azure   project(':plugins:nf-azure')
-    ignite  project(':plugins:nf-ignite')
     tower   project(':plugins:nf-tower')
+    wave    project(':plugins:nf-wave')
 }
 
 
-ext.mainClassName = 'nextflow.cli.Launcher'
+// ext.mainClassName removed - now using application.mainClass in Shadow plugin
 ext.homeDir = System.properties['user.home']
 ext.nextflowDir = "$homeDir/.nextflow/framework/$version"
 ext.releaseDir = "$buildDir/releases"
@@ -94,129 +89,44 @@ protected coordinates( it ) {
 }
 
 /*
- * Default nextflow package. It contains the capsule loader
+ * Compile and pack all packages
  */
-task packOne(type: Jar) {
-    dependsOn configurations.capsule, configurations.defaultCfg
-    archiveName = "nextflow-${version}-one.jar"
-
-    from (configurations.capsule.collect { zipTree(it) })
-
-    // main manifest attributes
-    def deps = resolveDeps('defaultCfg')
-
-    manifest.attributes(
-                'Main-Class'        : 'NextflowLoader',
-                'Application-Name'  : 'nextflow',
-                'Application-Class' : mainClassName,
-                'Application-Version': version,
-                'Min-Java-Version'  : '1.8.0',
-                'Caplets'           : 'MavenCapsule',
-                'Dependencies'      : deps
-    )
-
-    // enable snapshot dependencies lookup
-    if( version.endsWith('-SNAPSHOT') ) {
-        manifest.attributes 'Allow-Snapshots': true
-        manifest.attributes 'Repositories': 'local https://oss.sonatype.org/content/repositories/snapshots central seqera'
-    }
-    else {
-        manifest.attributes 'Repositories': 'central seqera'
-    }
-
+task packOne( dependsOn: [compile, ":nextflow:shadowJar"]) {
     doLast {
-        ant.copy(file: "$buildDir/libs/nextflow-${version}-one.jar", todir: releaseDir, overwrite: true)
-        ant.copy(file: "$buildDir/libs/nextflow-${version}-one.jar", todir: nextflowDir, overwrite: true)
-        println "\n+ Nextflow package `ONE` copied to: $releaseDir"
+        def source = "modules/nextflow/build/libs/nextflow-${version}-one.jar"
+        ant.copy(file: source, todir: releaseDir, overwrite: true)
+        ant.copy(file: source, todir: nextflowDir, overwrite: true)
+        println "\n+ Nextflow package `ONE` copied to: $releaseDir/nextflow-${version}-one.jar"
     }
 }
 
-task packAll(type: Jar) {
-    dependsOn configurations.capsule, configurations.defaultCfg
-    archiveName = "nextflow-${version}-all.jar"
-
-    from jar // embed our application jar
-    from (configurations.ignite + configurations.amazon + configurations.google + configurations.tower)
-    from (configurations.capsule.collect { zipTree(it) })
-    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
-    
-    manifest.attributes( 'Main-Class'        : 'NextflowLoader',
-                          'Application-Name'  : 'nextflow-all',
-                          'Application-Class' : mainClassName,
-                          'Application-Version': version,
-                          'Min-Java-Version'  : '1.8.0'
-                          )
-
-    manifest.attributes('Main-Class': 'NextflowLoader', 'amazon')
-    manifest.attributes('Main-Class': 'NextflowLoader', 'google')
-    manifest.attributes('Main-Class': 'NextflowLoader', 'ignite')
-
-    if( project.hasProperty('GA4GH') ) {
-        println "The build will include GA4GH dependencies."
-        from(configurations.ga4gh)
-        manifest.attributes('Main-Class': 'CapsuleLoader', 'ga4gh')
-    }
+task packDist( dependsOn: [compile, ":nextflow:shadowJar"]) {
 
     doLast {
-        file(releaseDir).mkdir()
+        file(releaseDir).mkdirs()
         // cleanup
-        def source = file("$buildDir/libs/nextflow-${version}-all.jar")
-        def target = file("$releaseDir/nextflow-${version}-all"); target.delete()
+        def source = file("modules/nextflow/build/libs/nextflow-${version}-one.jar")
+        def target = file("$releaseDir/nextflow-${version}-dist"); target.delete()
         // append the big jar
         target.withOutputStream {
-            it << file('nextflow').text.replaceAll(/NXF_PACK\=.*/, 'NXF_PACK=all')
+            it << file('nextflow').text.replaceAll(/NXF_PACK\=.*/, 'NXF_PACK=dist')
             it << new FileInputStream(source)
         }
         // execute permission
         "chmod +x $target".execute()
         // done
-        println "+ Nextflow package `ALL` copied to: $releaseDir\n"
+        println "+ Nextflow package `ALL` copied to: $target\n"
     }
 }
-
-task packCore(type: Jar) {
-    dependsOn configurations.capsule, configurations.defaultCfg
-    archiveName = "nextflow-${version}-core.jar"
-
-    from jar // embed our application jar
-    from (configurations.defaultCfg)
-    from (configurations.capsule.collect { zipTree(it) })
-    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
-
-    manifest.attributes( 'Main-Class'        : 'NextflowLoader',
-            'Application-Name'  : 'nextflow-core',
-            'Application-Class' : mainClassName,
-            'Application-Version': version,
-            'Min-Java-Version'  : '1.8.0'
-    )
-
-    doLast {
-        file(releaseDir).mkdir()
-        // cleanup
-        def source = file("$buildDir/libs/nextflow-${version}-core.jar")
-        def target = file("$releaseDir/nextflow-${version}-core"); target.delete()
-        // append the big jar
-        target.withOutputStream {
-            it << file('nextflow').text.replaceAll(/NXF_PACK\=.*/, 'NXF_PACK=all')
-            it << new FileInputStream(source)
-        }
-        // execute permission
-        "chmod +x $target".execute()
-        // done
-        println "+ Nextflow package `CORE` copied to: $releaseDir\n"
-    }
-}
-
 
 /*
  * Compile and pack all packages
  */
-task pack( dependsOn: [packOne, packAll]) {
+task pack( dependsOn: [packOne, packDist]) {
 
 }
 
-
-task deploy( type: Exec, dependsOn: [clean, compile, pack]) {
+task deploy( type: Exec, dependsOn: [clean, compile, pack, validatePluginVersions]) {
 
     def temp = File.createTempFile('upload',null)
     temp.deleteOnExit()
@@ -226,7 +136,7 @@ task deploy( type: Exec, dependsOn: [clean, compile, pack]) {
         checkVersionExits(version)
         
         def path = new File(releaseDir)
-        if( !path.exists() ) error("Releases path does not exists: $path")
+        if( !path.exists() ) error("Releases path does not exist: $path")
         path.eachFile {
             if( it.name.startsWith("nextflow-$version"))
                 files << it
@@ -257,6 +167,11 @@ task installLauncher(type: Copy, dependsOn: ['pack']) {
     into "$homeDir/.nextflow/framework/$version/"
 }
 
+task installScratch(type: Copy, dependsOn: ['pack']) {
+    from "$releaseDir/nextflow-$version-one.jar"
+    into "${rootProject.projectDir}/test-e2e/.nextflow/framework/$version/"
+}
+
 /*
  * build, tag and publish a and new docker packaged nextflow release
  */
@@ -278,7 +193,7 @@ task dockerImage(type: Exec) {
  * Build a docker container image with the current snapshot
  * DO NOT CALL IT DIRECTLY! Use the `make dockerPack` command instead
  */
-task dockerPack(type: Exec, dependsOn: ['pack']) {
+task dockerPack(type: Exec, dependsOn: ['packOne']) {
 
     def source = new File("$releaseDir/nextflow-$version-one.jar")
     def target = new File("$buildDir/docker/.nextflow/framework/$version/")
@@ -287,15 +202,13 @@ task dockerPack(type: Exec, dependsOn: ['pack']) {
     dockerBase.mkdirs()
     def dockerFile = new File("$buildDir/docker/Dockerfile")
     dockerFile.text = """
-    FROM openjdk:8-jre-alpine
+    FROM amazoncorretto:17-alpine-jdk
     RUN apk update && apk add bash && apk add coreutils && apk add curl
     COPY .nextflow /.nextflow
     COPY nextflow /usr/local/bin/nextflow
     COPY entry.sh /usr/local/bin/entry.sh
     COPY dist/docker /usr/local/bin/docker
     ENV NXF_HOME=/.nextflow
-    ENV NXF_OPTS='-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap'
-    RUN touch /.nextflow/dockerized && rm -rf /.nextflow/launch-classpath
     RUN chmod +x /usr/local/bin/nextflow /usr/local/bin/entry.sh
     RUN nextflow info
     ENTRYPOINT ["/usr/local/bin/entry.sh"]
@@ -311,7 +224,7 @@ task dockerPack(type: Exec, dependsOn: ['pack']) {
     cd $buildDir/docker  
     mkdir -p dist
     curl -fsSLO https://get.docker.com/builds/Linux/x86_64/docker-17.03.1-ce.tgz && tar --strip-components=1 -xvzf docker-17.03.1-ce.tgz -C dist
-    NXF_HOME=\$PWD/.nextflow nextflow info
+    NXF_HOME=\$PWD/.nextflow ./nextflow info
     docker build -t nextflow/nextflow:$version .
     """.stripIndent()
 
@@ -320,15 +233,16 @@ task dockerPack(type: Exec, dependsOn: ['pack']) {
 
 /*
  * Tag and upload the release
- * 
+ *
  * https://github.com/aktau/github-release/
  */
-task release(type: Exec, dependsOn: [pack, dockerImage]) {
+task release(type: Exec, dependsOn: [pack, dockerImage, validatePluginVersions]) {
 
     def launcherFile = file('nextflow').absoluteFile
     def launcherSha1 = file('nextflow.sha1').absoluteFile
     def launcherSha256 = file('nextflow.sha256').absoluteFile
-    def nextflowAllFile = file("$releaseDir/nextflow-${version}-all")
+    def nextflowAllFile = file("$releaseDir/nextflow-${version}-dist")
+    def versionFile = file('VERSION').absoluteFile
 
     def snapshot = version ==~ /^.+(-RC\d+|-SNAPSHOT)$/
     def edge = version ==~ /^.+(-edge|-EDGE)$/
@@ -352,6 +266,7 @@ task release(type: Exec, dependsOn: [pack, dockerImage]) {
         aws s3 cp $launcherSha1 s3://www2.nextflow.io/releases/edge/nextflow.sha1 $s3CmdOpts
         aws s3 cp $launcherSha256 s3://www2.nextflow.io/releases/edge/nextflow.sha256 $s3CmdOpts
         aws s3 cp $launcherSha256 s3://www2.nextflow.io/releases/edge/nextflow.md5 $s3CmdOpts
+        aws s3 cp $versionFile s3://www2.nextflow.io/releases/edge/version $s3CmdOpts
         """.stripIndent()
         
     else if( isLatest )
@@ -363,6 +278,7 @@ task release(type: Exec, dependsOn: [pack, dockerImage]) {
         aws s3 cp $launcherSha1 s3://www2.nextflow.io/releases/latest/nextflow.sha1 $s3CmdOpts
         aws s3 cp $launcherSha256 s3://www2.nextflow.io/releases/latest/nextflow.sha256 $s3CmdOpts
         aws s3 cp $launcherSha256 s3://www2.nextflow.io/releases/latest/nextflow.md5 $s3CmdOpts
+        aws s3 cp $versionFile s3://www2.nextflow.io/releases/latest/version $s3CmdOpts
         """.stripIndent()
 
     def temp = File.createTempFile('upload',null)
